# impersonate-proxy

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml  sitemap.xml
.agents/: AGENTS.md
.agents/context/: project_context.md
.agents/rules/: environment.md
.agents/skills/architect-review/: SKILL.md
.agents/skills/code-reviewer/: SKILL.md
.agents/skills/python-pro/: SKILL.md
.agents/skills/uv-testing/: SKILL.md
.agents/skills/vulnerability-scanner/scripts/: security_scan.py
.agents/workflows/: post-implementation-verification.md  uv-commands.md
.github/workflows/: docker-build.yml  docs.yml  project-tests.yml  publish.yml
docs/: mkdocs.yml  pyproject.toml
docs/docs/: index.md  install.md  license.md  workflow.md
docs/site/: 404.html  index.html  objects.inv  sitemap.xml
docs/site/assets/css/: extra.css
docs/site/install/: index.html
docs/site/license/: index.html
docs/site/search/: search_index.json
docs/site/workflow/: index.html
install/: index.html
license/: index.html
search/: search_index.json
src/impersonate_proxy/: main.py
src/tls_impersonate_proxy/: main.py
tests/: benchmark.py  test_cert_cache.py  test_config.py  test_headers.py  test_helpers.py  test_proxy_http.py  test_proxy_live.py  test_proxy_live_extended.py
workflow/: index.html
