[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["impersonate_proxy"]


[project]
name = "impersonate-proxy"
dynamic = ["version"]
description = "HTTP/HTTPS proxy that impersonates browser TLS fingerprints using curl_cffi"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "curl_cffi>=0.7.0",
    "cryptography>=42.0.0",
]

[project.scripts]
impersonate-proxy = "impersonate_proxy.main:main"

[project.optional-dependencies]
dev = [
    "basedpyright>=1.20.0",
    "ruff>=0.8.0",
    "pytest>=7.0.0",
    "requests>=2.28.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
]
ignore = [
    "E501",
    "SIM108",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["impersonate_proxy"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = "none"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownLambdaType = "none"
reportUnknownParameterType = "none"
reportGeneralTypeIssues = "none"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportOptionalMemberAccess = "none"
reportPossiblyUnboundVariable = "none"
include = ["src/impersonate_proxy"]
exclude = ["**/node_modules", "**/__pycache__", "venv", ".venv"]

[tool.pytest.ini_options]
addopts = "-m \"not live and not live_extended\""
markers = [
    "live: tests that hit real URLs (deselect with '-m \"not live\"')",
    "live_extended: extended fingerprint/bot-detection tests against known protected sites (run with 'pytest -m live_extended')",
]

